--- a/momentum/index.html
+++ b/momentum/index.html
@@ -49,6 +49,6 @@
       <div class="author"></div>
     </div>
   </footer>
-  <script src="js/script.js"></script>
+  <script src="dist/index.bundle.js"></script>
 </body>
 </html>
