--- a/momentum/index.html
+++ b/momentum/index.html
@@ -12,9 +12,30 @@
   <header class="header">
     <div class="player">
       <div class="player-controls">
-        <button class="play-prev player-icon"></button>
-        <button class="play player-icon"></button>
-        <button class="play-next player-icon"></button>
+        <div>
+          <button class="play-prev player-icon"></button>
+          <button class="play player-icon"></button>
+          <button class="play-next player-icon"></button>
+        </div>
+        <div class="player-music-name">River Flows In You</div>
+        <div class="player-volume-container">
+          <div class="player-volume-button">
+            <div class="player-volume icon-volume-medium"></div>
+          </div>
+          <div class="player-volume-slider">
+            <div class="player-volume-percentage"></div>
+          </div>
+        </div>
+      </div>
+      <div class="player-time">
+        <div class="player-timeline">
+          <div class="player-progress"></div>
+        </div>
+        <div class="player-music-time">
+          <div class="player-music-time-current">0:00</div>
+          <div class="player-music-time-divider">/</div>
+          <div class="player-music-time-length">0:00</div>
+        </div>
       </div>
       <ul class="play-list"></ul>
     </div>
@@ -39,10 +60,11 @@
     <date class="date"></date>
     <div class="greeting-container">
       <span class="greeting"></span>
-      <input type="text" class="name" placeholder="[Введите имя]"/>
+      <input type="text" class="name" placeholder=""/>
     </div>
   </main>
   <footer class="footer">
+    <div class="global-language">ENG</div>
     <button class="change-quote"></button>
     <div>
       <div class="quote"></div>
