feat: complete settings

--- a/momentum/index.html
+++ b/momentum/index.html
@@ -68,11 +68,11 @@
       <div class="settings-language">
         <div>
           <input type="radio" id="ru" name="languages" value="github" checked>
-          <label for="huey">РУС</label>
+          <label for="ru">РУС</label>
         </div>
         <div>
           <input type="radio" id="en" name="languages" value="unsplash">
-          <label for="huey">ENG</label>
+          <label for="en">ENG</label>
         </div>
       </div>
       <div class="settings-server-api-container">
