fix: hidden the settings before start

--- a/momentum/index.html
+++ b/momentum/index.html
@@ -64,7 +64,7 @@
     </div>
   </main>
   <footer class="footer">
-    <div class="settings-container">
+    <div class="settings-container settings-container-hidden">
       <div class="settings-language">
         <div>
           <input type="radio" id="ru" name="languages" value="github" checked>
