--- a/momentum/index.html
+++ b/momentum/index.html
@@ -150,6 +150,15 @@
       <div class="quote"></div>
       <div class="author"></div>
     </div>
+    <div class="links-container">
+      <a href="https://github.com/LuFtKrabbe">
+        <img src="./assets/img/luftkrabbe.png" alt="luftkrabbe">
+      </a>
+      <p>2023</p>
+      <a href="https://rs.school/js-stage0/" >
+        <img src="./assets/img/rsschool.png" alt="logo">
+      </a>
+    </div>
   </footer>
   <script src="dist/index.bundle.js"></script>
 </body>
